# QtSystray

./: CMakeLists.txt  main.cpp  systray.qrc  window.cpp  window.h
